@@ -1,3 +1,15 @@
+Mon Jan 23 16:46:20 2006  Tim Janik  <timj@imendio.com>
+
+	* glib/gslice.c (slice_config_init): initialize GSlice config from
+	G_SLICE environemtn variable. we support G_SLICE=always-malloc
+	currently, which forces all g_slice_*() allocations to use the system
+	malloc instead.
+
+	* glib/gutils.c: 
+	g_parse_debug_string(): added a note about not using g_malloc() here.
+	_g_getenv_nomalloc(): getenv() variant that doesn't use g_malloc or 
+	g_slice. contains only guesswork in the WIN32 branch.
+
 2006-01-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* Bump version
